--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,6 +19,12 @@
 </head>
 <body>
   <div class="container">
+    <div id="notification">
+      <% if @notification %>
+        <%= @notification %>
+      <% end %>
+    </div>
+
     <%= yield %>
   </div>
 </body>
