--- a/public/css/application.css
+++ b/public/css/application.css
@@ -4,6 +4,12 @@
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
 }
+
+#notification {
+  color: red;
+}
+
+
 th {
   text-align: left;
 }
